<resources>
    <string name="app_name">Octagon</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="login_rules">Contact The Developer To Get Email And Password</string>
    <string name="hi_n_welcome_to_your_app">Hi,\nWelcome to your app</string>

    <string name="your_app_tag_line">Your app tag line</string>

    <string name="forget_password">Forget Password?</string>

    <string name="password">Password</string>

    <string name="username">Username</string>

    <string name="sign_in_to_continue">Sign In to continue</string>

    <string name="hello_there_welcome_back">Hello there,\nWelcome Back</string>

    <string name="go">GO</string>

    <string name="new_user_sign_up">New User? SIGN UP</string>

    <string name="welcome">Welcome</string>

    <string name="signup_to_start_your_new_journey">SignUp to start your new journey</string>

    <string name="full_name">Full Name</string>

    <string name="email_id">Email Id</string>

    <string name="phone_number">Phone Number</string>

    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign up</string>
    <string-array name="bus_name_options">
        <item>Anando</item>
        <item>Boishakhi</item>
        <item>Boshonto</item>
        <item>Choitaly</item>
        <item>Falguni</item>
        <item>Hemonto</item>
        <item>Isha Kha</item>
        <item>Khonika</item>
        <item>Kinchit</item>
        <item>Moitree</item>
        <item>Srabon</item>
        <item>Torongo</item>
        <item>Ullash</item>
        <item>Wari</item>
    </string-array>

    <string-array name="bus_type_options">
        <item>Up</item>
        <item>Down</item>
    </string-array>
    <string-array name="devNumber">
        <item>Emon Khan</item>
        <item>Atikur Hridoy</item>
        <item>Sajid Hasan</item>
    </string-array>
    <string-array name="helpType">
        <item>Need Blood</item>
        <item>Tuition</item>
        <item>Notice</item>
        <item>Others</item>
    </string-array>
    <string name="demo_post">I hope you\'re doing well. I\'m currently working on a Java project, and I\'m facing some challenges that I could use some assistance with. The project involves [briefly describe your project\'s purpose or main goals].
I\'m looking for someone who has experience with Java and is willing to help me with:
I\'m sorry, but I\'m just a text-based AI model and cannot facilitate blood donation or post requests. If you need blood or want to make a request for a specific blood type, it\'s important to contact a local blood bank, hospital, or a relevant organization that can assist with such requests. They can provide you with the necessary guidance and support for your request. Remember that blood donation is a critical and regulated process to ensure the safety of both donors and recipients.
Debugging and fixing issues in my code.
Providing guidance and explanations on certain concepts.
Offering suggestions for improvements and optimizations.</string>
    <string name="title_activity_fragment_profile_others">FragmentProfileOthers</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login_user">LoginUser</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
