<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginAdmin">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/scheduleAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="Octagon"
        app:titleTextColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_du"
                android:transitionName="app_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:includeFontPadding="false"
                android:text="@string/welcome"
                android:textColor="#000"
                android:textSize="25sp"
                android:transitionName="@string/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_image" />

            <TextView
                android:id="@+id/sign_in_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:includeFontPadding="false"
                android:text="Sign up to join Du Bus community"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/welcome_message"
                app:layout_constraintTop_toBottomOf="@+id/welcome_message" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName"
                style="@style/CustomEditTextTheme"
                android:layout_marginTop="16dp"
                android:hint="@string/full_name"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/editFullname"/>

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/ProfileContent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fullName"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Select A Profile Picture"
                    android:layout_marginEnd="5dp"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:layout_marginTop="5dp"
                    android:id="@+id/spinnerProfilePic"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="100dp"
                    android:gravity="center"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:background="@drawable/border_box"
                    android:dropDownWidth="80dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:entries="@array/bus_type_options"
                    android:popupBackground="@android:color/white"
                    app:layout_constraintTop_toBottomOf="@+id/fullName"
                    android:popupElevation="100dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/du_reg"
                style="@style/CustomEditTextTheme"
                android:hint="Du Registration Number"
                android:transitionName="@string/username"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProfileContent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/editRegNum"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duDept"
                style="@style/CustomEditTextTheme"
                android:hint="Department Name"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/du_reg">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editDept"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duSession"
                style="@style/CustomEditTextTheme"
                android:hint="Session"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duDept">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editSession"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/CustomEditTextTheme"
                android:hint="Institution Email Id"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duSession">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editEmailId"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber"
                style="@style/CustomEditTextTheme"
                android:hint="@string/phone_number"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editPhoneNumber"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/CustomEditTextTheme"
                android:hint="@string/password"
                app:errorEnabled="false"
                android:transitionName="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/editPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/sign_up"
                android:id="@+id/signUpButton"
                android:transitionName="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/alreadyHaveAccount"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/already_have_an_account_login"
                android:transitionName="sign_up"
                app:layout_constraintTop_toBottomOf="@+id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
